--- a/.github/workflows/build-resume.yml
+++ b/.github/workflows/build-resume.yml
@@ -10,3 +10,9 @@ jobs:
         uses: xu-cheng/latex-action@v2
         with:
           root_file: xi-qiu-resume.tex
+      - name: Add & Commit to gh-pages
+        uses: EndBug/add-and-commit@v9.0.1
+        with:
+          default_author: github_actions
+          add: 'xi-qiu-resume.pdf'
+          new_branch: gh-pages
