only triggers gh actions when pushed to main

--- a/.github/workflows/build-resume.yml
+++ b/.github/workflows/build-resume.yml
@@ -1,5 +1,8 @@
 name: Build resume with LaTex
-on: [push]
+on:
+  push:
+    branches:
+      - main
 jobs:
   build_resume:
     runs-on: ubuntu-latest
