--- a/.github/workflows/build-resume.yml
+++ b/.github/workflows/build-resume.yml
@@ -8,11 +8,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Set up Git repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Compile LaTeX document
         uses: xu-cheng/latex-action@v2
         with:
           root_file: xi-qiu-resume.tex
+      - name: Checkout gh-pages branch
+        uses: actions/checkout@v3
+        with:
+          ref: gh-pages
       - name: Add & Commit to gh-pages
         uses: EndBug/add-and-commit@v9.0.1
         with:
